# xmonad-config

./: .gitignore  .xmobarrc  brittany.yaml  cabal.project  cabal.project.freeze  default.nix  hie.yaml  restart  stack.yaml  xmobar.hs  xmonad-config.cabal  xmonad.hs
