name:                xmonad-config
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-x86_64-linux
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:       base
                     , rio
                     , filepath
                     , process
                     , containers
                     , xmonad
                     , xmonad-contrib
                     , X11
                     , GenericPretty
                     , split
                     , transformers
  default-language:    Haskell2010

executable xmobar-x86_64-linux
  main-is:             xmobar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:       base
                     , xmobar
                     , X11
                     , rio
  default-language:    Haskell2010
